# ntp-projekat

./: README.md
api-gateway-service/: go.mod  go.sum  main.go
api-gateway-service/handlers/: auth.go  emails.go  products.go  recommendations.go  reviews.go  statistics.go  users.go  v3ds.go
api-gateway-service/utils/: auth.go  response.go
client-app/: package-lock.json  package.json
client-app/src/: App.js  index.js
email-service/: go.mod  go.sum  main.go
email-service/handlers/: emails.go
email-service/templates/: deleted-review-template.html  product-changed-template.html  test-template.html
image-service/: go.mod  go.sum  main.go
image-service/files/: local.go  storage.go
image-service/handlers/: delete.go  filepaths.go  files.go
product-service/: go.mod  go.sum  main.go
product-service/data/: json.go  products.go  validation.go
product-service/db/: db.go  repo.go
product-service/email/: email.go
product-service/exceptions/: exceptions.go
product-service/handlers/: delete.go  get.go  middleware.go  post.go  products.go  put.go
product-service/models/: dto.go  model.go
product-service/utils/: json.go
recommendation-service/: .env  Cargo.toml  Rocket.toml
recommendation-service/src/: main.rs
review-service/: Cargo.toml  Rocket.toml
review-service/src/: main.rs
statistics-service/: Cargo.toml  Rocket.toml
statistics-service/src/: main.rs
statistics-service/src/db/: mod.rs
statistics-service/src/service/: mod.rs
user-service/: go.mod  go.sum  main.go
user-service/data/: json.go  (+4 more)
v3d-service/: go.mod  go.sum  main.go
(+109 files in other folders)
