[package]
name = "statistics-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
postgres = "0.19.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"

reqwest = { version = "0.11", features = ["json"] }
